--- a/src/MotionV2.csproj
+++ b/src/MotionV2.csproj
@@ -25,11 +25,14 @@
 		<SymbolPackageFormat>symbols.nupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
-
 	<PropertyGroup>
-		<Version>0.1.0-beta-1</Version>
+		<Version>0.1.0-beta-2</Version>
 		<AssemblyVersion>0.1.0</AssemblyVersion>
 		<FileVersion>0.1.0</FileVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 	</PropertyGroup>
 
 </Project>
