--- a/cli/Properties/launchSettings.json
+++ b/cli/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "MotionCLI": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-f code.lisp"
     }
   }
 }
