--- a/cli/MotionCLI.csproj
+++ b/cli/MotionCLI.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CypherPotato.CommandLine" Version="1.0.0" />
+	  <PackageReference Include="PrettyPrompt" Version="4.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
