--- a/cli/MotionCLI.csproj
+++ b/cli/MotionCLI.csproj
@@ -11,7 +11,9 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CypherPotato.CommandLine" Version="1.0.0" />
+	  <PackageReference Include="CypherPotato.LightJson" Version="0.9.0-beta3" />
 	  <PackageReference Include="PrettyPrompt" Version="4.1.1" />
+	  <PackageReference Include="Spectre.Console.Json" Version="0.49.1" />
 	</ItemGroup>
 
 	<ItemGroup>
