--- a/cli/Properties/launchSettings.json
+++ b/cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MotionCLI": {
       "commandName": "Project",
-      "commandLineArgs": "-f code.lisp"
+      "commandLineArgs": "-e http://localhost:4446/v1/motion -u gscatolin@outlook.com:m"
     }
   }
 }
