--- a/cli/Properties/launchSettings.json
+++ b/cli/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "MotionCLI": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-r \"C:\\Code\\repos\\MotionTinyComponents\\bin\\Debug\\net8.0\\MotionTinyComponents.dll\""
     },
     "Profile 1": {
       "commandName": "Project",
